--- a/demos/demo_tdcosmo_camb.ini
+++ b/demos/demo_tdcosmo_camb.ini
@@ -8,18 +8,18 @@ verbosity = standard
 nsample_dimension = 5
 
 [pipeline]
-modules = consistency tdcosmo
-values = demos/values_tdcosmo.ini
+modules = consistency camb tdcosmo
+values = demos/values_tdcosmo_camb.ini
 
 
 [output]
 format=text
-filename=output/demo_tdcosmo.txt
+filename=output/demo_tdcosmo_camb.txt
 
 ; We have a single likelihood module here.
 [tdcosmo]
 file = ./likelihood/tdcosmo/tdcosmo_likelihood.py
-distances_computation_module = "CosmoInterp"
+distances_computation_module = "camb"
 num_distribution_draws = 200
 data_sets = 'tdcosmo7'
 
@@ -28,17 +28,17 @@ data_sets = 'tdcosmo7'
 [consistency]
 file = ./utility/consistency/consistency_interface.py
 
-;[camb]
-;; For background-only data we do not need a full
-;; Boltzmann evaluation, just D(z), etc.
-;; Setting mode=background means we get this.
-;file = boltzmann/camb/camb_interface.py
-;mode = background
-;feedback = 0
-;
-;; We need quite fine redshift spacing, because the supernovae
-;; go down to low z where things are pretty sensitive
-;nz_background = 200
-;zmin_background = 0.0
-;zmax_background = 2.0
+[camb]
+; For background-only data we do not need a full
+; Boltzmann evaluation, just D(z), etc.
+; Setting mode=background means we get this.
+file = boltzmann/camb/camb_interface.py
+mode = background
+feedback = 0
+
+; We need quite fine redshift spacing, because the supernovae
+; go down to low z where things are pretty sensitive
+nz_background = 200
+zmin_background = 0.0
+zmax_background = 3.0
 
