--- a/demos/values_tdcosmo_camb.ini
+++ b/demos/values_tdcosmo_camb.ini
@@ -12,6 +12,11 @@ wa = 0.0
 mnu = 0.06
 nnu = 3.046
 
+; CAMB requires these parameters to be set even
+; if they are not used
+A_s = 2.0e-9
+n_s = 1.0
+tau = 0.08
 
 [nuisance_strong_lensing]
 ; kinematics and Mass-Sheet Degeneracy parameters
@@ -20,3 +25,4 @@ log_lambda_mst_sigma = -1.39
 alpha_lambda = 0.0
 log_a_ani = 0.17
 log_a_ani_sigma = -0.52
+
