Add real-space HSC shear example and additive systematics model

--- a/examples/hsc-y3-shear.ini
+++ b/examples/hsc-y3-shear.ini
@@ -1,7 +1,9 @@
-;***********************************
-;multinest is the default sampler
-;***********************************
-; parameters used elsewhere in this file
+; This is an example using the HSC Year 3 cosmic shear data.
+; It is based on Dalal et al, but that work used the power spectrum
+; the power spectrum from the linear BACCO emulator and pyhmcode2016, the
+; interfaces for which are not public immediately. Results may be slightly
+; different, but S_8 constraints should match well.
+
 [DEFAULT]
 2PT_FILE = likelihood/hsc_cosmic_shear/hsc_y3_fourier_shear.sacc
 
