Add real-space HSC shear example and additive systematics model

--- a/examples/hsc-y3-shear-real.ini
+++ b/examples/hsc-y3-shear-real.ini
@@ -9,8 +9,8 @@
 
 [pipeline]
 fast_slow = F
-values = examples/hsc-y3-shear-values.ini
-priors = examples/hsc-y3-shear-priors.ini
+values = examples/hsc-y3-shear-real-values.ini
+priors = examples/hsc-y3-shear-real-priors.ini
 
 modules =
     consistency
@@ -24,7 +24,9 @@ modules =
     pk_to_cl
     add_intrinsic
     shear_m_bias
-    sacc_like
+    cl_to_xi
+    additive_systematics
+    2pt_like
 
 extra_output =
             cosmological_parameters/sigma_8
@@ -149,25 +151,47 @@ file = shear/shear_bias/shear_m_bias.py
 m_per_bin = True
 verbose = F
 
-[sacc_like]
-file = likelihood/hsc_cosmic_shear/hsc_cosmic_shear_like.py
-include_norm=F
-data_file = %(2PT_FILE)s
-data_sets = cl_ee
+[cl_to_xi]
+file = shear/cl_to_xi_nicaea/nicaea_interface.so
+corr_type = 0
+
+[additive_systematics]
+file = likelihood/hsc_cosmic_shear/additive_systematic/sys_model.py
+nzs = 1
+model_type = systematics
+theta_min = 3.5
+theta_max = 200.
+psf_file = likelihood/hsc_cosmic_shear/additive_systematic/systematics.npz
+tfile = likelihood/hsc_cosmic_shear/additive_systematic/coorT_cat0.npz
+
+
+[2pt_like]
+file = likelihood/2pt/2pt_like.py
+include_norm = F
+data_file  = likelihood/hsc_cosmic_shear/hsc_y3_real.fits
+data_sets = xi_plus xi_minus
+make_covariance = F
+covmat_name = COVMAT
 covariance_realizations = 1404
-sellentin = F
-psf_file = likelihood/hsc_cosmic_shear/ppcorr_psf_all_ells_lmax_1800_catalog2.npz
-psf_transformation_file = likelihood/hsc_cosmic_shear/psf_transform_matrix_lmax_1800_catalog2.npz
-angle_range_cl_ee_wl_0_wl_0 = 300. 1800.
-angle_range_cl_ee_wl_0_wl_1 = 300. 1800.
-angle_range_cl_ee_wl_0_wl_2 = 300. 1800.
-angle_range_cl_ee_wl_0_wl_3 = 300. 1800.
-angle_range_cl_ee_wl_1_wl_1 = 300. 1800.
-angle_range_cl_ee_wl_1_wl_2 = 300. 1800.
-angle_range_cl_ee_wl_1_wl_3 = 300. 1800.
-angle_range_cl_ee_wl_2_wl_2 = 300. 1800.
-angle_range_cl_ee_wl_2_wl_3 = 300. 1800.
-angle_range_cl_ee_wl_3_wl_3 = 300. 1800.
-; only do this if using test sampler!
-; save_theory = output/hsc-y3-shear-theory.sacc
-; save_realization = output/hsc-y3-shear-sim.sacc
+
+angle_range_xi_plus_1_1 = 7.13  56.52
+angle_range_xi_plus_1_2 = 7.13  56.52
+angle_range_xi_plus_1_3 = 7.13  56.52
+angle_range_xi_plus_1_4 = 7.13  56.52
+angle_range_xi_plus_2_2 = 7.13  56.52
+angle_range_xi_plus_2_3 = 7.13  56.52
+angle_range_xi_plus_2_4 = 7.13  56.52
+angle_range_xi_plus_3_3 = 7.13  56.52
+angle_range_xi_plus_3_4 = 7.13  56.52
+angle_range_xi_plus_4_4 = 7.13  56.52
+
+angle_range_xi_minus_1_1 = 31.28 247.75
+angle_range_xi_minus_1_2 = 31.28 247.75
+angle_range_xi_minus_1_3 = 31.28 247.75
+angle_range_xi_minus_1_4 = 31.28 247.75
+angle_range_xi_minus_2_2 = 31.28 247.75
+angle_range_xi_minus_2_3 = 31.28 247.75
+angle_range_xi_minus_2_4 = 31.28 247.75
+angle_range_xi_minus_3_3 = 31.28 247.75
+angle_range_xi_minus_3_4 = 31.28 247.75
+angle_range_xi_minus_4_4 = 31.28 247.75
