Add baccoemu emulator

--- a/structure/baccoemu/module.yaml
+++ b/structure/baccoemu/module.yaml
@@ -20,19 +20,12 @@ explanation: |
     Baccoemu is a collection of cosmological neural-network emulators for large-scale structure statistics
     in a wide cosmological parameter space, including dynamical dark energy and massive neutrinos. 
     These emulators were developed as part of the Bacco project.
-    
-    We imported the Bacco Emulator code into this directory because the PyPI version of the code is not recent,
-    and it has some dependencies that we would like to install from conda-forge rather than PyPI (tensorflow).
-    We have to make one change to it to make it work on python 3.8 and 3.9 - replacing the progressbar2
-    library with TQDM. A patch file with this change is included.
-    
     The license for this package says copyright belongs to the python packaging authority, but that seems unlikely.
 
 # List of parameters that can go in the params.ini file in the section for this module    
 params:
     mode:
-        meaning:
-            What to emulate; the NL DM-only power, the baryonic boost, or both. Choose from 'nonlinear', 'baryons', 'nonlinear+baryons'. If 'baryons' is chosen then the NL power is read from the block (e.g. from camb). Otherwise the NL power is emulated.
+        meaning: Whether to include baryonic effects. Choose from 'pk_nl_only' and 'pk_nl_plus_baryons'.
         type: str
         default: pk_nl_only
 
@@ -43,28 +36,12 @@ inputs:
         z:
             meaning: Redshifts of samples. 
             type: real 1d
-            default: 
         k_h:
             meaning: Wavenumbers k of samples in Mpc/h.
             type: real 1d
-            default: 
         p_k:
             meaning: Linear power spectrum at samples in (Mpc/h)^-3.
             type: real 2d
-            default: 
-    matter_power_nl:
-        z:
-            meaning: Redshifts of samples. Only if mode = = "baryons".
-            type: real 1d
-            default: 
-        k_h:
-            meaning: Wavenumbers k of samples in Mpc/h. Only if mode = = "baryons".
-            type: real 1d
-            default: 
-        p_k:
-            meaning: Linear power spectrum at samples in (Mpc/h)^-3. Only if mode = = "baryons".
-            type: real 2d
-            default: 
     cosmological_parameters:
         A_s:
             meaning: Amplitude of the primordial power spectrum.
@@ -115,16 +92,16 @@ inputs:
             meaning:  characteristic halo mass scale for central galaxies, in range 9.0 to 13.0; log scale in Msun/h
             type: real
             default:
-        theta_out: 
-            meaning: Scaling of r200 to give outer power-law profile scale of hot gas radius. Range 0.0 to 0.477
+        theta_out: Scaling of r200 to give outer power-law profile scale of hot gas radius. Range 0.0 to 0.477
+            meaning: 
             type: real
             default:
-        theta_inn: 
-            meaning: Scaling of r200 to give inner power-law profile scale of hot gas radius. Range -2.0 to -0.522
+        theta_inn: Scaling of r200 to give inner power-law profile scale of hot gas radius. Range -2.0 to -0.522
+            meaning: 
             type: real
             default:
-        M_inn: 
-            meaning: Characteristic mass of inner hot gas; log scale in Msun/h. Range 9.0 to 13.5.
+        M_inn: Characteristic mass of inner hot gas; log scale in Msun/h. Range 9.0 to 13.5.
+            meaning: 
             type: real
             default:
 
@@ -138,5 +115,5 @@ outputs:
             meaning: Wavenumbers k of samples in Mpc/h.
             type: real 1d
         p_k:
-            meaning: Non-linear power spectrum at samples in (Mpc/h)^-3, potentially including baryon corrections.
+            meaning: Non-linear power spectrum at samples in (Mpc/h)^-3.
             type: real 2d
