--- a/examples/bacco.ini
+++ b/examples/bacco.ini
@@ -1,6 +1,6 @@
 [runtime]
 sampler = test
-verbosity = debug
+verbosity = standard
 
 [apriori]
 nsample = 100
@@ -43,7 +43,7 @@ kmin=1e-4
 kmax = 50.0
 kmax_extrapolate = 500.0
 nk=700
-nz = 150
+nz = 200
 
 [extrapolate]
 file = boltzmann/extrapolate/extrapolate_power.py
@@ -51,4 +51,4 @@ kmax = 500.
 
 [bacco_emulator]
 file = structure/baccoemu/baccoemu_interface.py
-mode = nonlinear
+mode = pk_nl_plus_baryons
