switch baccoemu to TQDM

--- a/structure/baccoemu/module.yaml
+++ b/structure/baccoemu/module.yaml
@@ -20,7 +20,12 @@ explanation: |
     Baccoemu is a collection of cosmological neural-network emulators for large-scale structure statistics
     in a wide cosmological parameter space, including dynamical dark energy and massive neutrinos. 
     These emulators were developed as part of the Bacco project.
-
+    
+    We imported the Bacco Emulator code into this directory because the PyPI version of the code is not recent,
+    and it has some dependencies that we would like to install from conda-forge rather than PyPI (tensorflow).
+    We have to make one change to it to make it work on python 3.8 and 3.9 - replacing the progressbar2
+    library with TQDM. A patch file with this change is included.
+    
     The license for this package says copyright belongs to the python packaging authority, but that seems unlikely.
 
 # List of parameters that can go in the params.ini file in the section for this module    
