Some updates to bacco interface to make option names clearer

--- a/examples/bacco.ini
+++ b/examples/bacco.ini
@@ -1,6 +1,6 @@
 [runtime]
 sampler = test
-verbosity = standard
+verbosity = debug
 
 [apriori]
 nsample = 100
@@ -51,4 +51,4 @@ kmax = 500.
 
 [bacco_emulator]
 file = structure/baccoemu/baccoemu_interface.py
-mode = pk_nl_plus_baryons
+mode = nonlinear
