--- a/structure/baccoemu/module.yaml
+++ b/structure/baccoemu/module.yaml
@@ -31,7 +31,11 @@ explanation: |
 # List of parameters that can go in the params.ini file in the section for this module    
 params:
     mode:
-        meaning: Whether to include baryonic effects. Choose from 'pk_nl_only' and 'pk_nl_plus_baryons'.
+        meaning: |
+            What to emulate; the NL DM-only power, the baryonic boost, or both.
+            Choose from 'nonlinear', 'baryons', 'nonlinear+baryons'. If 'baryons' is chosen then
+            the NL power is read from the block (e.g. from camb). Otherwise the NL power is
+            emulated.
         type: str
         default: pk_nl_only
 
@@ -47,6 +51,16 @@ inputs:
             type: real 1d
         p_k:
             meaning: Linear power spectrum at samples in (Mpc/h)^-3.
+            type: real 2d
+    matter_power_nl:
+        z:
+            meaning: Redshifts of samples. Only if mode = = "baryons".
+            type: real 1d
+        k_h:
+            meaning: Wavenumbers k of samples in Mpc/h. Only if mode = = "baryons".
+            type: real 1d
+        p_k:
+            meaning: Linear power spectrum at samples in (Mpc/h)^-3. Only if mode = = "baryons".
             type: real 2d
     cosmological_parameters:
         A_s:
@@ -121,5 +135,5 @@ outputs:
             meaning: Wavenumbers k of samples in Mpc/h.
             type: real 1d
         p_k:
-            meaning: Non-linear power spectrum at samples in (Mpc/h)^-3.
+            meaning: Non-linear power spectrum at samples in (Mpc/h)^-3, potentially including baryon corrections.
             type: real 2d
