--- a/examples/demo_tdcosmo_camb.ini
+++ b/examples/demo_tdcosmo_camb.ini
@@ -9,8 +9,8 @@ nsample_dimension = 5
 
 [pipeline]
 modules = consistency camb tdcosmo
-values = demos/values_tdcosmo_camb.ini
-
+values = examples/values_tdcosmo.ini
+prior = examples/priors_tdcosmo.ini
 
 [output]
 format=text
