--- a/demos/values_tdcosmo_camb.ini
+++ b/demos/values_tdcosmo_camb.ini
@@ -20,9 +20,9 @@ tau = 0.08
 
 [nuisance_strong_lensing]
 ; kinematics and Mass-Sheet Degeneracy parameters
-lambda_mst = 1.0
-log_lambda_mst_sigma = -1.39
-alpha_lambda = 0.0
-log_a_ani = 0.17
-log_a_ani_sigma = -0.52
+lambda_mst = 0.5 1.0 1.5
+log_lambda_mst_sigma = -3 -1.398 -0.301
+alpha_lambda = -1. 0.0 1.
+log_a_ani = -1 0.176 0.699
+log_a_ani_sigma = -2 -0.523 0.
 
