--- a/examples/values_tdcosmo.ini
+++ b/examples/values_tdcosmo.ini
@@ -4,13 +4,19 @@
 ; lower limit,  starting value,  upper limit
 
 omega_m = 0.05 0.3 0.5
-h0 = 0. 0.72 1.5
+h0 = 0.5 0.72 1.5
 omega_b = 0.04
 omega_k = 0.0
 w = -1.0
 wa = 0.0
 mnu = 0.06
 nnu = 3.046
+
+; CAMB requires these parameters to be set even
+; if they are not used
+A_s = 2.0e-9
+n_s = 1.0
+tau = 0.08
 
 
 [nuisance_strong_lensing]
