adding final examples files

--- a/examples/tdcosmo.ini
+++ b/examples/tdcosmo.ini
@@ -8,19 +8,20 @@ verbosity = standard
 nsample_dimension = 5
 
 [pipeline]
-modules = consistency tdcosmo
+modules = consistency camb tdcosmo
 values = examples/values_tdcosmo.ini
 priors = examples/priors_tdcosmo.ini
 
 
 [output]
 format=text
-filename=output/tdcosmo_prior.txt
+filename=output/tdcosmo_camb.txt
 
 ; We have a single likelihood module here - BICEP2.
 [tdcosmo]
 file = likelihood/tdcosmo/tdcosmo_likelihood.py
-distances_computation_module = "CosmoInterp"
+;distances_computation_module = "CosmoInterp"
+distances_computation_module = "camb"
 num_distribution_draws = 200
 data_sets = 'tdcosmo7'
 
@@ -28,6 +29,21 @@ data_sets = 'tdcosmo7'
 ; and any other that modules in the pipeline may want (e.g. camb)
 [consistency]
 file = utility/consistency/consistency_interface.py
+
+[camb]
+; For background-only data we do not need a full
+; Boltzmann evaluation, just D(z), etc.
+; Setting mode=background means we get this.
+file = boltzmann/camb/camb_interface.py
+mode = background
+feedback = 0
+
+; We need quite fine redshift spacing, because the supernovae
+; go down to low z where things are pretty sensitive
+nz_background = 200
+zmin_background = 0.0
+zmax_background = 3.0
+
 
 ;[camb]
 ;; For background-only data we do not need a full
@@ -45,7 +61,7 @@ file = utility/consistency/consistency_interface.py
 
 [polychord]
 base_dir = output/y3-polychord-checkpoints
-polychord_outfile_root = tdcosmo_prior
+polychord_outfile_root = tdcosmo
 resume = F
 feedback = 3
 fast_fraction = 0.1
@@ -66,5 +82,3 @@ walkers = 80
 samples = 10000
 nsteps = 5
 
-[apriori]
-nsample = 100000
