Cleaning up files and documenting likelihood.

--- a/examples/tdcosmo.ini
+++ b/examples/tdcosmo.ini
@@ -17,10 +17,9 @@ priors = examples/priors_tdcosmo.ini
 format=text
 filename=output/tdcosmo_camb.txt
 
-; We have a single likelihood module here - BICEP2.
 [tdcosmo]
+; This is the likelihood from https://arxiv.org/abs/2007.02941 (Fig. 7, purple contours).
 file = likelihood/tdcosmo/tdcosmo_likelihood.py
-;distances_computation_module = "CosmoInterp"
 distances_computation_module = "camb"
 num_distribution_draws = 200
 data_sets = 'tdcosmo7'
@@ -44,20 +43,6 @@ nz_background = 200
 zmin_background = 0.0
 zmax_background = 3.0
 
-
-;[camb]
-;; For background-only data we do not need a full
-;; Boltzmann evaluation, just D(z), etc.
-;; Setting mode=background means we get this.
-;file = boltzmann/camb/camb_interface.py
-;mode = background
-;feedback = 0
-;
-;; We need quite fine redshift spacing, because the supernovae
-;; go down to low z where things are pretty sensitive
-;nz_background = 200
-;zmin_background = 0.0
-;zmax_background = 2.0
 
 [polychord]
 base_dir = output/y3-polychord-checkpoints
