--- a/examples/tdcosmo_values.ini
+++ b/examples/tdcosmo_values.ini
@@ -20,11 +20,14 @@ tau = 0.08
 
 [nuisance_strong_lensing]
 ; kinematics and Mass-Sheet Degeneracy parameters
+; values taken from Table 3 from https://arxiv.org/pdf/2007.02941.pdf
 lambda_mst = 0.5 1.0 1.5
-;lambda_mst_sigma = 0 0.04 0.2
 log_lambda_mst_sigma = -3 -1.398 -0.301
 alpha_lambda = -1. 0.0 1.
-;a_ani = 0.1 1.5 5.
-;a_ani_sigma = 0. 0.3 1.
 log_a_ani = -1 0.176 0.699
 log_a_ani_sigma = -2 -0.523 0.
+
+; official values are the ones above but if linear space is inteded, use values below and edit the likelihod file.
+;lambda_mst_sigma = 0 0.04 0.2
+;a_ani = 0.1 1.5 5.
+;a_ani_sigma = 0. 0.3 1.
