--- a/examples/tdcosmo.ini
+++ b/examples/tdcosmo.ini
@@ -9,8 +9,8 @@ nsample_dimension = 5
 
 [pipeline]
 modules = consistency camb tdcosmo
-values = examples/values_tdcosmo.ini
-priors = examples/priors_tdcosmo.ini
+values = examples/tdcosmo_values.ini
+priors = examples/tdcosmo_priors.ini
 
 
 [output]
