added npipe priors to match paper lensing-only one

--- a/examples/planck-npipe.ini
+++ b/examples/planck-npipe.ini
@@ -1,12 +1,21 @@
 [runtime]
-sampler = test
+sampler = nautilus
 root = ${PWD}
 verbosity = standard
+
+[nautilus]
+n_live = 1000
+verbose = T
+
+
 
 [test]
 save_dir=output/planck
 fatal_errors=T
 
+
+[output]
+filename = output/npipe.txt
 
 [DEFAULT]
 ; This value is used below as %(planck_path)s
@@ -16,8 +25,8 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 [pipeline]
 ; these names refer to sections later in the file:
 modules = consistency camb planck_npipe
-values = examples/planck_values.ini
-priors = examples/planck_priors.ini
+values = examples/npipe-values.ini
+priors = examples/npipe-priors.ini
 debug=T
 timing=F
 
@@ -39,7 +48,7 @@ cosmomc_theta = T
 file = boltzmann/camb/camb_interface.py
 mode = cmb
 lmax = 2800          ;max ell to use for cmb calculation
-feedback=1         ;amount of output to print
+feedback=0         ;amount of output to print
 AccuracyBoost=1.1 ;CAMB accuracy boost parameter
 do_tensors = True   ;include tensor modes
 do_lensing = true    ;lensing is required w/ Planck data
