--- a/examples/npipe-values.ini
+++ b/examples/npipe-values.ini
@@ -1,8 +1,22 @@
+[planck]
+a_planck          = 0.9 1.0 1.1 ; Total Planck calibration (relative to 1) at map level, scales all channels
+
+
 [cosmological_parameters]
-cosmomc_theta = 1.040909  ; this is actually 100 * theta_mc
+; cosmomc_theta =  1.0   1.040909   1.08 ; this is actually 100 * theta_mc
+h0 = 0.4  0.7  1.0
+omch2 = 0.05  0.12  0.2
+log1e10As = 2.9  3.0448  3.1     ; structure amplitude parameter
+
+ombh2 = 0.020 0.0222  0.025
+n_s = 0.9  0.96  1.02
+
+
 omega_k = 0.0     ;spatial curvature
-ombh2 = 0.022383
-omch2 = 0.12011
+
+;reionization
+tau = 0.055      ;reionization optical depth
+
 
 ;neutrinos
 mnu = 0.06
@@ -12,12 +26,7 @@ num_massive_neutrinos = 1
 ;helium 
 yhe = 0.245341  ;helium mass fraction
 
-;reionization
-tau = 0.0543      ;reionization optical depth
 
-;inflation Parameters
-n_s = 0.96605      ;scalar spectral index
-log1e10As = 3.0448 ; structure amplitude parameter
 k_s = 0.05      ;Power spectrum pivot scale 
 n_run = 0.0     ;running of scalar spectrum 
 r_t = 0.0       ;tensor to scalar ratio
@@ -27,5 +36,3 @@ n_t = 0.0       ;tensor spectral index
 w = -1.0   ;equation of state of dark energy
 wa = 0.0   ;equation of state of dark energy (redshift dependency)
 
-[planck]
-a_planck          = 0.9 1.0 1.1 ; Total Planck calibration (relative to 1) at map level, scales all channels
