change tt to pp in npipe example

--- a/examples/planck-npipe.ini
+++ b/examples/planck-npipe.ini
@@ -35,7 +35,7 @@ extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 ;Planck 2018 high ell TT,TE and EE + low ell TT + low ell EE (in Planck notations = TT+lowE)
 ;without CMB lensing
 file = likelihood/planck-npipe/npipe_interface.py
-mode = tt
+mode = pp
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
