save derived params

--- a/examples/planck-npipe.ini
+++ b/examples/planck-npipe.ini
@@ -29,7 +29,7 @@ values = examples/npipe-values.ini
 priors = examples/npipe-priors.ini
 debug=T
 timing=F
-
+extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 
 [planck_npipe]
 ;Planck 2018 high ell TT,TE and EE + low ell TT + low ell EE (in Planck notations = TT+lowE)
