try old planck lensing

--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -26,10 +26,10 @@ timing=F
 ;Planck 2018 high ell TT,TE and EE + low ell TT + low ell EE (in Planck notations = TT+lowE)
 ;without CMB lensing
 file = likelihood/planck2018/planck_interface.so
-data_1 = %(planck_path)s/hi_l/plik_lite/plik_lite_v22_TTTEEE.clik
-data_2 = %(planck_path)s/low_l/commander/commander_dx12_v3_2_29.clik
-data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
-
+; data_1 = %(planck_path)s/hi_l/plik_lite/plik_lite_v22_TTTEEE.clik
+; data_2 = %(planck_path)s/low_l/commander/commander_dx12_v3_2_29.clik
+; data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
+lensing_1 = %(planck_path)s/lensing/smicadx12_Dec5_ftl_mv2_ndclpp_p_teb_consext8_CMBmarged.clik_lensing
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
