try old planck lensing

--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -8,6 +8,11 @@ save_dir=output/planck
 fatal_errors=T
 
 
+[nautilus]
+n_live = 1000
+verbose = T
+
+
 [DEFAULT]
 ; This value is used below as %(planck_path)s
 planck_path = likelihood/planck2018/baseline/plc_3.0
