try old planck lensing

--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -25,6 +25,7 @@ values = examples/planck_values.ini
 priors = examples/planck_priors.ini
 debug=T
 timing=F
+extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 
 
 [planck]
