--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -22,7 +22,7 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 ; these names refer to sections later in the file:
 modules = consistency camb planck
 values = examples/planck_values.ini
-priors = examples/planck_priors.ini
+priors = examples/npipe-priors.ini
 debug=T
 timing=F
 extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
