Entirely new npipe interface using hopefully correct classes

--- a/examples/npipe-values.ini
+++ b/examples/npipe-values.ini
@@ -36,3 +36,7 @@ n_t = 0.0       ;tensor spectral index
 w = -1.0   ;equation of state of dark energy
 wa = 0.0   ;equation of state of dark energy (redshift dependency)
 
+
+[halo_model_parameters]
+A = 3.13
+eta = 0.603
