--- a/examples/planck-npipe.ini
+++ b/examples/planck-npipe.ini
@@ -1,5 +1,5 @@
 [runtime]
-sampler = nautilus
+sampler = test
 root = ${PWD}
 verbosity = standard
 
@@ -35,7 +35,7 @@ extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 ;Planck 2018 high ell TT,TE and EE + low ell TT + low ell EE (in Planck notations = TT+lowE)
 ;without CMB lensing
 file = likelihood/planck-npipe/npipe_interface.py
-mode = pp
+use_marginalized = T
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
@@ -54,5 +54,6 @@ do_tensors = True   ;include tensor modes
 do_lensing = true    ;lensing is required w/ Planck data
 NonLinear = lens
 accurate_massive_neutrino_transfers = T
-theta_H0_range = "20 100"
+theta_H0_range = "40 100"
+halofit_version = mead
 
