switch to sampling in theta and report which likelihood is used

--- a/examples/npipe-values.ini
+++ b/examples/npipe-values.ini
@@ -3,8 +3,8 @@ a_planck          = 0.9 1.0 1.1 ; Total Planck calibration (relative to 1) at ma
 
 
 [cosmological_parameters]
-; cosmomc_theta =  1.0   1.040909   1.08 ; this is actually 100 * theta_mc
-h0 = 0.4  0.7  1.0
+ cosmomc_theta =  0.9   1.040909   1.2 ; this is actually 100 * theta_mc
+;h0 = 0.4  0.7  1.0
 omch2 = 0.05  0.12  0.2
 log1e10As = 2.9  3.0448  3.1     ; structure amplitude parameter
 
