revert back to original main planck ini files

--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -8,11 +8,6 @@ save_dir=output/planck
 fatal_errors=T
 
 
-[nautilus]
-n_live = 1000
-verbose = T
-
-
 [DEFAULT]
 ; This value is used below as %(planck_path)s
 planck_path = likelihood/planck2018/baseline/plc_3.0
@@ -22,20 +17,19 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 ; these names refer to sections later in the file:
 modules = consistency camb planck
 values = examples/planck_values.ini
-priors = examples/npipe-priors.ini
+priors = examples/planck_priors.ini
 debug=T
 timing=F
-extra_output = cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 
 
 [planck]
 ;Planck 2018 high ell TT,TE and EE + low ell TT + low ell EE (in Planck notations = TT+lowE)
 ;without CMB lensing
 file = likelihood/planck2018/planck_interface.so
-; data_1 = %(planck_path)s/hi_l/plik_lite/plik_lite_v22_TTTEEE.clik
-; data_2 = %(planck_path)s/low_l/commander/commander_dx12_v3_2_29.clik
-; data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
-lensing_1 = %(planck_path)s/lensing/smicadx12_Dec5_ftl_mv2_ndclpp_p_teb_consext8_CMBmarged.clik_lensing
+data_1 = %(planck_path)s/hi_l/plik_lite/plik_lite_v22_TTTEEE.clik
+data_2 = %(planck_path)s/low_l/commander/commander_dx12_v3_2_29.clik
+data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
+
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
